# terminal-gpt

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  ENHANCED_INTERFACE_SUMMARY.md  ENVIRONMENT_SETUP.md  IMPLEMENTATION_CHALLENGES.md  PHASE_1_SUMMARY.md  PHASE_2_COMPLETION.md  PHASE_2_TEST_RESULTS.md  PLUGIN_SYSTEM.md  PROJECT_METRICS.md  QUICK_START.md  README.md  UI_UX_ENHANCEMENT_SUMMARY.md  demo.py  docker-compose.yml  pyproject.toml  requirements.txt  setup-env.sh  test-config.py  test_context_summarization_integration.py  test_enhanced_ui.py  test_phase_2_functionality.py  test_phase_2_integration.py  test_streaming.py  test_ui_enhancements.py  test_weather_plugin.py  weather_config.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  docker-build.yml  security.yml
docs/: STREAMING_RESPONSES.md
src/terminal_gpt/: __init__.py  __main__.py  config.py  main.py
src/terminal_gpt/api/: routes.py
src/terminal_gpt/application/: events.py  orchestrator.py
src/terminal_gpt/cli/: __init__.py  enhanced_ui.py  streaming_client.py  terminal.py
src/terminal_gpt/domain/: exceptions.py  models.py  plugins.py
src/terminal_gpt/infrastructure/: __init__.py  builtin_plugins.py  context_summarizer.py  llm_providers.py  logging.py  prompt_manager.py  sports_providers.py
tests/unit/: test_domain_models.py  test_exceptions.py  test_llm_providers.py  test_orchestrator.py  test_plugins.py
